<resources>
    <string name="app_name">Quiz App</string>
    <string name="q1_text">Q1 - Which of the following is true about php.ini file?</string>
    <string name="q1_a1_text">The PHP configuration file, php.ini, is the final and most immediate way to affect PHP\'s functionality</string>
    <string name="q1_a2_text">The php.ini file is read each time PHP is initialized</string>
    <string name="q2_text">Q2 - Which of the following is correct about variable naming rules?</string>
    <string name="q2_a1_text">Variable names must begin with a letter or underscore character</string>
    <string name="q2_a2_text">A variable name can consist of numbers, letters, underscores</string>
    <string name="q2_a3_text">You cannot use characters like + , - , % , ( , ) . &amp; , etc in a variable name</string>
    <string name="q3_text">Q3 - Which of the following is correct about constants?</string>
    <string name="q3_a1_text">To define a constant you have to use define() function</string>
    <string name="q3_a2_text">To retrieve the value of a constant, you have to simply specify its name</string>
    <string name="q4_text">Q4 - Which of the following function is used to locate a string within a string?</string>
    <string name="q4_a1_text">search()</string>
    <string name="q4_a2_text">locate()</string>
    <string name="q4_a3_text">strpos()</string>
    <string name="q5_text">Q5 - Which of the following function can be used to get an array in the reverse order?</string>
    <string name="q5_a1_text">array_reverse()</string>
    <string name="q5_a2_text">array_search()</string>
    <string name="q5_a3_text">array_shift()</string>
    <string name="q5_a4_text">array_slice()</string>
    <string name="q6_text">Q6 - Which of the following function checks if a specified value exists in an array?</string>
    <string name="q6_a1_text">extract()</string>
    <string name="q6_a2_text">in_array()</string>
    <string name="q6_a3_text">key()</string>
    <string name="q6_a4_text">krsort()</string>
    <string name="q7_text">Q7 - Which of the following is used to access session variables in PHP?</string>
    <string name="q7_a1_text">session_start() function</string>
    <string name="q7_a2_text">$_SESSION[]</string>
    <string name="q7_a3_text">isset() function</string>
    <string name="q7_a4_text">session_destroy() function</string>
    <string name="q8_text">Q8 - Which of the following is an associative array containing session variables available to the current script?</string>
    <string name="q8_a1_text">$GLOBALS</string>
    <string name="q8_a2_text">$_SERVER</string>
    <string name="q8_a3_text">$_COOKIE</string>
    <string name="q8_a4_text">$_SESSION</string>
    <string name="q9_text">Q9 - Which of the following method of Exception class returns array of the backtrace?</string>
    <string name="q9_a1_text">getMessage()</string>
    <string name="q9_a2_text">getCode()</string>
    <string name="q9_a3_text">getTrace()</string>
    <string name="q9_a4_text">getTraceAsString()</string>
    <string name="q10_text">Q10 - Which of the following method acts as a destructor function in a PHP class?</string>
    <string name="q10_a1_text">class_name()</string>
    <string name="q10_a2_text">__destruct()</string>
    <string name="q10_a3_text">destructor()</string>
    <string name="q10_a4_text">None of the above.</string>
    <string name="q11_text">Q11 - All variables in PHP start with which symbol?</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="your_score">Your Score</string>
</resources>
